<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getPrefs"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChoosePrefs"
        android:textSize="25sp"
        android:fontFamily="@font/holtwood_one_sc"
        android:textColor="@android:color/holo_red_light"
        android:textAlignment="center"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foodTypes"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/white"
        android:orientation="horizontal"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg_maxdist"
            ><TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dist_label"
            android:text="@string/max_distance"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_10"
                android:text="@string/_10_miles"
                android:textColor="@android:color/holo_red_light"
                android:fontFamily="@font/holtwood_one_sc"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_25"
                android:text="@string/_25_miles"
                android:textColor="@android:color/holo_red_light"
                android:fontFamily="@font/holtwood_one_sc"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_50"
                android:text="@string/_50_miles"
                android:textColor="@android:color/holo_red_light"
                android:fontFamily="@font/holtwood_one_sc"/>
        </RadioGroup>
    </LinearLayout>

   


</androidx.constraintlayout.widget.ConstraintLayout>